# seaa2023_ect

./: .gitignore  CITATION.cff  README.md  data-analysis.ipynb  pyproject.toml
config/: base.yaml  experiment.yaml
data/metrics/interim/: dataset_card.md  model_metrics.gzip
data/metrics/processed/: dataset_card.md  dl-training-energy-consumption-dataset.gzip
data/metrics/raw/cloud/mobilenet_v2/: cpu-mem-usage-20221205T095541.csv  cpu-mem-usage-20221205T104713.csv  cpu-mem-usage-20221205T114105.csv  cpu-mem-usage-20221205T121530.csv  cpu-mem-usage-20221205T125938.csv  cpu-mem-usage-20221205T134528.csv  cpu-mem-usage-20221205T143322.csv  cpu-mem-usage-20221205T150015.csv  cpu-mem-usage-20221205T160341.csv  cpu-mem-usage-20221205T164029.csv  cpu-mem-usage-20221205T173048.csv  cpu-mem-usage-20221205T181055.csv  cpu-mem-usage-20221205T185721.csv  cpu-mem-usage-20221205T192400.csv  cpu-mem-usage-20221205T200451.csv  cpu-mem-usage-20221205T210112.csv  cpu-mem-usage-20221205T215259.csv  cpu-mem-usage-20221205T223042.csv  cpu-mem-usage-20221205T232356.csv  cpu-mem-usage-20221205T235055.csv  cpu-mem-usage-20221206T003424.csv  cpu-mem-usage-20221206T012510.csv  cpu-mem-usage-20221206T020325.csv  cpu-mem-usage-20221206T022738.csv  cpu-mem-usage-20221206T031227.csv  (+36 more)
data/metrics/raw/interim/: model_metrics.gzip
src/: __init__.py  environment.py  utils.py
src/data/: analysis.py  preprocessing.py  utils.py
src/mlflow/: utils.py
src/models/: __init__.py  run_training.py  train_model.py  visualization.py
src/profiling/: metrics.py  monitoring.py  profile_models.py
(+560 files in other folders)
